Add Tests-Folder and Scripts
Create the `tests` folder and add a script to automate all tests, a first test
adventure and its commands scripts.

--- a/.gitattributes
+++ b/.gitattributes
@@ -26,7 +26,8 @@
 ## Game Scripts & Logs
 ## ===================
 *.log      text
-*.script   text
+*.a3log    text
+*.a3sol    text
 
 ## =============
 ## AlanIDE Files
@@ -68,6 +69,7 @@
 *.txt        text
 COPYING      text
 LICENSE      text
+UNLICENSE    text
 
 ## ============
 ## CONFIG FILES
