Extras: Add Clothing Guide
Add "Clothing Guide" document in AsciiDoc, plus scripts and assets to
provide HTML styles and Alan code syntax highlighting for all documents
in the `extras` folder (and the whole project).

--- a/.gitattributes
+++ b/.gitattributes
@@ -57,7 +57,13 @@
 *.htm      text
 *.html     text
 *.css      text
+*.css.map  text
 *.js       text
+
+## ===============
+## SASS/SCSS FILES
+## ===============
+*.scss     text
 
 ## ===================
 ## DOCUMENTATION FILES
