Reorganize Test Suite
Subdivide tests into diffrent subfolders, according to tests scope.
New version of RUNTESTS batch file that allows two types of test folders:

- Single Adventure -> Multiple Tests
- Multiple Adventures -> One/More Tests per Adventure

Unlimited folders support for the first type of tests, a single folder
the second type.

The new RUNTESTS batch creates a unified detailed report for all tests.

--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,17 @@
 *.ifid
 *.log
 *.sav
-!tests/meta-verbs_arun-different.sav
+!tests/misc/meta-verbs_arun-different.sav
 
 ## =============
 ## AlanIDE Files
 ## =============
 .project
+
+## =================
+## Trizbort Settings
+## =================
+appsettings.json
 
 # ==========
 # Sass Cache
