--- a/.gitattributes
+++ b/.gitattributes
@@ -154,6 +154,8 @@ UNLICENSE    text
 
 ## Dev folders
 ##############
+/assets/        export-ignore
+/assets_src/    export-ignore
 /extras_src/    export-ignore
 /tests/         export-ignore
 
