Move Sass Sources Folder
This commit further cleans up the `extras_src/` folder from unneeded
clutter.

- Move `extras_src/sass/` to `assets_src/sass/`.
- Update the Sass build script into a single `build-docinfo.sh` script,
  which handles compiling the CSS and injecting it into the docinfo file
  at once. The new script uses `init-env.sh` and its global vars.
- Delete all other previous scripts in `assets_src/sass/`.
- Update all READMEs accordingly.

--- a/.gitattributes
+++ b/.gitattributes
@@ -52,10 +52,10 @@
 
 ## HTML Backend
 ###############
-*.htm      text linguist-generated=true
-*.html     text linguist-generated=true
-*.css      text linguist-generated=true
-*.js       text linguist-vendored=true
+*.htm      text         linguist-generated=true
+*.html     text         linguist-generated=true
+*.css      text eol=lf  linguist-generated=true
+*.js       text         linguist-vendored=true
 
 
 # SASS/SCSS:
