--- a/.gitattributes
+++ b/.gitattributes
@@ -164,40 +164,4 @@ LICENSE      text
 *.asciidoc   export-ignore
 *.adoc       export-ignore
 
-# ==============================================================================
-#                                GitHub Linguist
-# ==============================================================================
-#  -- https://github.com/github/linguist
-#
-# Manually define/override some extension so that GitHub's Linguist library can
-# 1) Correctly gather statistics on source files, and
-# 2) Use proper syntax highlighting on GitHub's WebUI.
-
-# NOTE: Alan syntax is not supported by Linguist:
-#      https://github.com/github/linguist/blob/master/lib/linguist/languages.yml
-
-## =================
-## Alan Source Files
-## =================
-# Even if Alan syntax is not supported, hopefully these settings might help the
-# repo statics to show up correctly (long-shot guess):
-*.alan    linguist-language=Alan
-*.i       linguist-language=Alan
-*.alan    linguist-detectable=true
-*.i       linguist-detectable=true
-
-*.ifid    linguist-generated=true
-
-## =============
-## AlanIDE Files
-## =============
-.project   linguist-language=XML
-.project   linguist-generated=true
-
-## Sample Patterns
-## ---------------------------
-# *.ext    linguist-detectable=true
-# *.ext    linguist-documentation=true
-# *.ext    linguist-generated=true
-# *.ext    linguist-language=LANG
-# *.ext    linguist-vendored=true
+# EOF #
