Adopt '.a3s' and '.a3t' Extensions
Stop using `.a3sol` and `.a3log` extensions for solutions and transcripts
and use instead the new `.a3s` and `.a3t` official extensions recently
introduced in ARun (see alan-if/alan#2).

This commit contains lots of changes:

- Rename all `*.a3sol` and `*.a3log` files to `*.a3s` and `*.a3t`
- Fix ``include::` directives in AsciiDoc sources.
- Tweak all toolchain scripts to use the new extensions.
- Tweak repository configurations.
- Fix references to old extensions in READMEs and other MD docs.

Fixes #128.

--- a/.editorconfig
+++ b/.editorconfig
@@ -14,7 +14,7 @@ root = true
 ; Skip encoding validation because of EClint's buggy support of this feature,
 ; leading to false positive error reports. (See #73)
 
-[*.{alan,i,a3sol}]
+[*.{alan,i,a3s}]
 indent_style = space
 indent_size = unset
 charset = unset
