--- a/.editorconfig
+++ b/.editorconfig
@@ -38,7 +38,7 @@ charset = utf-8-bom
 
 ## AsciiDoc
 ###########
-[*.{ad,adoc,asciidoc}]
+[*.{adoc,asc,asciidoc}]
 indent_size = unset
 indent_style = space
 end_of_line = unset
